--- a/proxy/src/main/resources/about.html
+++ b/proxy/src/main/resources/about.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-     <h3>This is simple maven repo.</h3>
+     <h3>This is a maven repository proxy.</h3>
      <h4>Features</h4>
      <ul>
        <li>check exists before downloading</li>
